compiler/src/test/resources/golden/errors/eff_union_leak.dawn
fn compose[A, B, C](f: fn(A) -> B !e1, g: fn(B) -> C !e2) -> fn(A) -> C !(e1 | e2) =
  fn(a) => g(f(a))

fn inc(x: Int) -> Int = x + 1
fn tag(x: Int) -> String !io = {
  println("tag {x}")
  "n{x}"
}

fn bad() -> String = {
  let p = compose(inc, tag)
  p(5)
}
