compiler/src/test/resources/golden/errors/eff_union_leak.err
error: function `bad` is not declared !io but calls `p` (!io)
  --> eff_union_leak.dawn:12:3
   |
12 |   p(5)
   |   ^
  = hint: add !io to the end of the signature, or remove the call
